--- a/qichiyu.ini
+++ b/qichiyu.ini
@@ -4,9 +4,9 @@
 ;电报群：https://t.me/qichiyuchat
 
 ;规则集定义
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/qichiyuhub/rule/master/Direct.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/qichiyuhub/rule/master/ProxyLite.list
-ruleset=🤖 AI,https://raw.githubusercontent.com/qichiyuhub/rule/master/AI.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/jvanhao/dafeizei/refs/heads/master/Direct.list.txt
+ruleset=🚀 节点选择,https://raw.githubusercontent.com/jvanhao/dafeizei/refs/heads/master/ProxyLite.list
+ruleset=🤖 AI,https://raw.githubusercontent.com/jvanhao/dafeizei/refs/heads/master/AI.list.txt
 ruleset=🍀 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=💧 Copilot,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
 ruleset=🐬 OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OneDrive/OneDrive.list
